# point-pillars

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  requirements.txt  training.md
PointPillars/: CMakeLists.txt  README.md  README_zh-CN.md  bootstrap.yaml
PointPillars/lidar_detector/: CMakeLists.txt  detector.cc  detector.hpp  lidar_node.cc  lidar_node.hpp  main.cc  package.xml
PointPillars/lidar_detector/launch/: lidar_node.launch
PointPillars/pointpillars/: CMakeLists.txt  nms.cu  pointpillars.cpp  pointpillars.h  pointpillars.hpp  postprocess.cu  postprocess.hpp  preprocess.cu  scatter.cu
PointPillars/pointpillars/cfgs/: cbgs_pp_multihead.yaml
PointPillars/test/: CMakeLists.txt  pointpillars_test.cc  pointpillars_test.cpp
config/: bootstrap.yaml  lidar_node.launch
src/lidar_detector/: CMakeLists.txt  bootstrap.yaml  lidar_node.cc  lidar_node.hpp  main.cc  package.xml  pclbuff.cc  pclbuff.hpp
src/lidar_detector/launch/: lidar_node.launch  lidar_node.test  lidar_node_tester.launch
src/lidar_detector/test/: CMakeLists.txt  pclbuff_test.cpp  pointcloud.bag
