<?xml version="0.0"?>
<package format="2">
  <name>lidar_detector</name>
  <version>0.0.1</version>
  <description>ROS PointPillars lidar detector</description>
  <url>mememme</url>
  <maintainer email="Me@me.com">Me</maintainer>
  <author email="Me@me.com">Me</author>
  <license>NotEmpty</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>message_filters</depend>
  <depend>odts_msgs</depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <!--<depend>tf</depend>-->
  <!-- <depend>tf_conversions</depend> -->

</package>
