set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

file(GLOB SRC *.cpp *.cu)
cuda_add_library(${PROJECT_LIB_NAME} ${SRC} OPTIONS -DYAML_BUILD_SHARED_LIBS=ON ) #OPTIONS -shared -fPIC
# CUDA_ADD_EXECUTABLE(${PROJECT_LIB_NAME} )
target_link_libraries(${PROJECT_LIB_NAME} ${LINK_LIBRARY} OpenMP::OpenMP_CXX)

##########
# Install
##########
message("Installing pointpillars...")
message("${PROJECT_LIB_NAME} -> ${CMAKE_CURRENT_SOURCE_DIR}/../../install/lib")
install(TARGETS ${PROJECT_LIB_NAME} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../install/lib)
install(
    DIRECTORY "."
    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../install/include/${PROJECT_NAME}
    FILES_MATCHING PATTERN "*.h"
)
