<?xml version="0.0"?>
<package format="2">
  <name>lidar_detector</name>
  <version>0.0.1</version>
  <description>ROS PointPillars lidar detector</description>
  <url>https://github.com/Otteri/point-pillars</url>
  <maintainer email="airakjo@gmail.com">Otteri</maintainer>
  <author email="airakjo@gmail.com">Otteri</author>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz_detections</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
</package>
